updating for new import

--- a/search/server/public/result.handlebars
+++ b/search/server/public/result.handlebars
@@ -23,15 +23,26 @@
 		<div class="Description" style='margin-bottom:15px'>{{Description}}</div>
 	{{/if}}
 	
-	<div class="row-fluid" style='margin-bottom:15px'>
+	<h4>Main Metadata</h4>
+	<div class="row-fluid">
 		<div class="span6">
-			<div id="result-left-panel"></div>
+			<div id="result-main-left-panel"></div>
 		</div>
 		<div class="span6">
-			<div id="result-right-panel"></div>
+			<div id="result-main-right-panel"></div>
 		</div>
 	</div>
-	
+
+	<h4>Secondary Metadata</h4>
+	<div class="row-fluid" style='margin-bottom:15px'>
+		<div class="span6">
+			<div id="result-secondary-left-panel"></div>
+		</div>
+		<div class="span6">
+			<div id="result-secondary-right-panel"></div>
+		</div>
+	</div>
+
 	<div class="well">
 		<div id="result-chart-panel"></div>
 	</div>
