--- a/search/server/public/result.handlebars
+++ b/search/server/public/result.handlebars
@@ -49,7 +49,24 @@
 		<div id="result-chart-panel"></div>
 	</div>
 	
-	<div id="result-export"></div>
+	<div id="result-export">
+		<div class="form-inline" role="form">
+		  <div class="form-group">
+		    <label for="export-type">Separator</label>
+			<select id="export-type" class="form-control">
+				<option value="tab">Tab</option>
+				<option value="comma">Comma</option>
+				<option value="spaces">Spaces</option>
+			</select>
+		  </div>
+		  <div class="checkbox">
+		    <label>
+		      <input type="checkbox" id="export-metadata" checked="checked" > Include Metadata
+		    </label>
+		  </div>
+		  <a id="export-go" class="btn btn-primary"><i class='icon-download-alt'></i> Download</a>
+		</div>
+	</div>
 
 	
   </div>
