--- a/search/server/public/result.handlebars
+++ b/search/server/public/result.handlebars
@@ -47,6 +47,7 @@
 
 	<div class="well">
 		<div id="result-chart-panel"></div>
+		<a class="btn btn-default" id="print-chart" style="margin-top:10px"><i class="icon-print"></i> Printable Version</a>
 	</div>
 	
 	<div id="result-export">
