--- a/search/server/public/result.handlebars
+++ b/search/server/public/result.handlebars
@@ -23,7 +23,7 @@
 		<div class="Description" style='margin-bottom:15px'>{{Description}}</div>
 	{{/if}}
 	
-	<h4>Main Metadata</h4>
+	<h4>Ecosis Metadata</h4>
 	<div class="row-fluid">
 		<div class="span6">
 			<div id="result-main-left-panel"></div>
@@ -33,7 +33,10 @@
 		</div>
 	</div>
 
-	<h4>Secondary Metadata</h4>
+	<h4>Custom Data Package Metadata</h4>
+	<div class="help-block">
+		This metadata is specific to this dataset.  You can still filter on it's values, though you will probably filter out all other datasets as most will not have these attributes.
+	</div>
 	<div class="row-fluid" style='margin-bottom:15px'>
 		<div class="span6">
 			<div id="result-secondary-left-panel"></div>
@@ -45,11 +48,13 @@
 
 	<div id="resources-link"></div>
 
+	<h4>Spectra</h4>
 	<div class="well">
 		<div id="result-chart-panel"></div>
 		<a class="btn btn-default" id="print-chart" style="margin-top:10px"><i class="icon-print"></i> Printable Version</a>
 	</div>
 	
+	<h4>Download</h4>
 	<div id="result-export">
 		<div class="form-inline" role="form">
 		  <div class="form-group">
