--- a/search/server/public/result.handlebars
+++ b/search/server/public/result.handlebars
@@ -19,7 +19,7 @@
 	        <ul class="nav nav-btns">
 				<li><a goto="metadata">Metadata</a></li>
 				<li><a goto="customMetadata">Custom Metadata</a></li>
-				<li><a goto="package">Data Package</a></li>
+				<li><a goto="package">Dataset</a></li>
 				<li><a goto="chart">Chart</a></li>
 				<li><a goto="download">Download</a></li>
 			</ul>
@@ -48,7 +48,7 @@
 		<div class="Description" style='margin-bottom:15px'>{{Description}}</div>
 	{{/if}}
 	
-	<h3 class="page-header" id="metadata" style="margin: 50px 0 10px 0">Ecosis Metadata</h3>
+	<h3 class="page-header" id="metadata" style="margin: 50px 0 10px 0">Metadata</h3>
 	<div class="row-fluid">
 		<div class="span6">
 			<div id="result-main-left-panel"></div>
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<h3 class="page-header" id="customMetadata" style="margin: 50px 0 10px 0">Custom Data Package Metadata</h3>
+	<h3 class="page-header" id="customMetadata" style="margin: 50px 0 10px 0">Custom Dataset Metadata</h3>
 	<div class="help-block">
 		This metadata is specific to this dataset.  You can still filter on it's values, though you will probably filter out all other datasets as most will not have these attributes.
 	</div>
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 
-	<h3 class="page-header" id="package" style="margin: 50px 0 10px 0;border-bottom: none">Data Package</h3>
+	<h3 class="page-header" id="package" style="margin: 50px 0 10px 0;border-bottom: none">Dataset</h3>
 	<div id="resources-link"></div>
 
 	<h3 class="page-header" id="chart" style="margin: 50px 0 10px 0">Spectra</h3>
