lots of UI updates

--- a/search/app/result.handlebars
+++ b/search/app/result.handlebars
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-
+<div style="padding: 0 5%">
   <h3 class="page-header">{{ecosis._title}}</h3>
 
   <div id="dataset-content" class="well"><i class="fa fa-spinner fa-spin"></i> Loading...</div>
@@ -45,6 +45,6 @@
 
   <h4 class="page-header" id="download">Download</h4>
   <esis-data-downloader></esis-data-downloader>
-
+</div>
 
 </script>
