adding ALL btn for results page filters

--- a/search/app/css/style.css
+++ b/search/app/css/style.css
@@ -77,6 +77,11 @@
 	border-bottom: 1px solid #eee;
 }
 
+.all-filters-link {
+	cursor: pointer;
+	white-space:nowrap;
+}
+
 .showall-link-box {
 	border                : 1px solid #e5e5e5;
 	padding               : 15px;
