--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,6 @@
 	display: none;
 }
 
-.random-label {
-	display: inline-block;
-	padding-left: 15px;
-	color: #888;
-}
-
 .card {
 	padding: 15px;
 	margin: 20px;
@@ -26,34 +20,8 @@
 	}
 }
 
-.result-padding {
-	padding: 0 10px;
-}
-@media(min-width: 640px) {
-	.result-padding {
-		padding: 0 20px;
-	}
-}
-
 .card > .page-header {
 	margin-top: 0px;
-}
-
-.result-header {
-	background-color: rgba(200,200,200, .6);
-	position: fixed;
-	top: 50px;
-	left: 0;
-	width: 100%;
-	border-bottom: 1px solid #ccc;
-	z-index: 1000;
-	color: #333;
-	text-shadow: 1px 1px 0 white;
-}
-
-.result-header h3 {
-	color: #333;
-	text-shadow: 1px 1px 0 white;
 }
 
 .filter-block {
@@ -65,69 +33,61 @@
 	font-weight : bold;
 }
 
-.search-result-row {
-	margin : 2px;
-	padding : 10px 15px 15px 15px;
-}
-
-#results-panel .search-result-row:nth-child(even) {
-	background-color : #f5f5f5;
-
-	border-radius         : 4px;
-	-moz-border-radius    : 4px;
-	-webkit-border-radius : 4px;
-}
-
-.search-result-row h6 {
-	margin: 0px;
-	border-bottom: 1px solid #eee;
-}
-
 .all-filters-link {
 	cursor: pointer;
-	white-space:nowrap;
-}
-
-.showall-link-box {
-	border                : 1px solid #e5e5e5;
-	padding               : 15px;
-	margin-top            : 25px;
-
-	border-radius         : 4px;
-	-moz-border-radius    : 4px;
-	-webkit-border-radius : 4px;
-}
-
-.help-text {
-	font-size   : 11px;
-	text-shadow : 0 1px 0 rgba(255,255,255,0.5);
-	color       : #888;
-}
-
-del {
-	color : #b94a48;
-	border-radius : 5px;
-	-moz-border-radius : 5px;
-	-webkit-border-radius : 5px;
-}
-
-ins {
-	color : #468847;
-
-	border-radius : 5px;
-	-webkit-border-radius : 5px;
-	-moz-border-radius : 5px;
-}
-
-.resources-title {
-	margin: -5px 0 10px 0 !important;
-}
-@media(max-width: 768px) {
-	.resources-title {
-		margin: 0 0 5px 0 !important;
-	}
+	white-space: nowrap;
 }
 
 .well {
 	background-color: white !important;
+}
+
+.splash {
+	margin-top: 0px;
+	padding: 60px 0;
+	text-align: center;
+	min-height: 400px;
+	width: 100%;
+}
+.splash h1 {
+	color: white;
+	letter-spacing: 10px;
+	text-shadow: 0 0 15px #333;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+.splash h1 div {
+	font-size:2em;
+}
+.splash h3 {
+	color: white;
+	letter-spacing: 5px;
+	text-shadow: 0 0 15px #333;
+}
+.splash-url {
+	letter-spacing: 5px;
+	color:white;
+	margin: 20px 0;
+	padding: 20px 0;
+	border-top: 3px solid white;
+	border-bottom: 3px solid white;
+}
+
+@media(max-width: 680px) {
+	.splash h1 {
+		letter-spacing: 5px;
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.splash h1 div {
+		font-size:1.5em;
+	}
+	.splash h3 {
+		letter-spacing: 2px;
+	}
+	.splash-url {
+		letter-spacing: 2px;
+		margin: 10px 0;
+		padding: 10px 0;
+	}
 }
